--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ int main( void )
             <button type="button" class="btn btn-default" name="Chromium">Chromium</button>
             <button type="button" class="btn btn-default" name="Mozilla">Mozilla</button>
             <button type="button" class="btn btn-default" name="WebKit">WebKit</button>
-　          <button class="btn btn-lg btn-primary" id="submit" type="submit">整形する</button>
+            <button type="button" class="btn btn-primary" id="submit">整形する</button>
           </div>
         </div>
       </div>
